--- a/Draw/Controller/Chat/ChatController~ipad.xib
+++ b/Draw/Controller/Chat/ChatController~ipad.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50b</string>
+		<string key="IBDocument.SystemVersion">11E53</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.32</string>
-		<string key="IBDocument.HIToolboxVersion">568.00</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">1179</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUIView</string>
@@ -139,6 +139,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{252, 434}, {228, 73}}</string>
 								<reference key="NSSuperview" ref="846355833"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -211,7 +212,7 @@
 									<object class="IBUIButton" id="777707669">
 										<reference key="NSNextResponder" ref="876821904"/>
 										<int key="NSvFlags">319</int>
-										<string key="NSFrame">{{511, 40}, {117, 73}}</string>
+										<string key="NSFrame">{{519, 40}, {109, 73}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
 										<reference key="NSNextKeyView" ref="748825807"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -230,7 +231,7 @@
 									<object class="IBUILabel" id="748825807">
 										<reference key="NSNextResponder" ref="876821904"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{511, 40}, {117, 73}}</string>
+										<string key="NSFrame">{{519, 40}, {109, 73}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
 										<reference key="NSNextKeyView" ref="594883497"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -257,9 +258,9 @@
 									<object class="IBUILabel" id="923374262">
 										<reference key="NSNextResponder" ref="876821904"/>
 										<int key="NSvFlags">319</int>
-										<string key="NSFrame">{{131, 29}, {283, 49}}</string>
+										<string key="NSFrame">{{131, 29}, {321, 49}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
-										<reference key="NSNextKeyView" ref="974060178"/>
+										<reference key="NSNextKeyView" ref="966626452"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -315,7 +316,7 @@
 										<int key="NSvFlags">319</int>
 										<string key="NSFrame">{{247, 88}, {226, 37}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
-										<reference key="NSNextKeyView" ref="777707669"/>
+										<reference key="NSNextKeyView" ref="974060178"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -334,12 +335,40 @@
 									<object class="IBUIImageView" id="974060178">
 										<reference key="NSNextResponder" ref="876821904"/>
 										<int key="NSvFlags">319</int>
-										<string key="NSFrame">{{437, 36}, {36, 36}}</string>
+										<string key="NSFrame">{{475, 89}, {36, 36}}</string>
 										<reference key="NSSuperview" ref="876821904"/>
-										<reference key="NSNextKeyView" ref="1004384965"/>
+										<reference key="NSNextKeyView" ref="777707669"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+									</object>
+									<object class="IBUILabel" id="966626452">
+										<reference key="NSNextResponder" ref="876821904"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrame">{{460, 29}, {51, 52}}</string>
+										<reference key="NSSuperview" ref="876821904"/>
+										<reference key="NSNextKeyView" ref="1004384965"/>
+										<string key="NSReuseIdentifierKey">_NS:9</string>
+										<bool key="IBUIOpaque">NO</bool>
+										<bool key="IBUIClipsSubviews">YES</bool>
+										<int key="IBUIContentMode">7</int>
+										<bool key="IBUIUserInteractionEnabled">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<string key="IBUIText">LV:1</string>
+										<reference key="IBUITextColor" ref="525190894"/>
+										<nil key="IBUIHighlightedColor"/>
+										<int key="IBUIBaselineAdjustment">0</int>
+										<float key="IBUIMinimumFontSize">10</float>
+										<int key="IBUITextAlignment">2</int>
+										<object class="IBUIFontDescription" key="IBUIFontDescription">
+											<int key="type">1</int>
+											<double key="pointSize">17</double>
+										</object>
+										<object class="NSFont" key="IBUIFont">
+											<string key="NSName">Helvetica</string>
+											<double key="NSSize">17</double>
+											<int key="NSfFlags">16</int>
+										</object>
 									</object>
 								</array>
 								<string key="NSFrame">{{38, 147}, {655, 153}}</string>
@@ -500,6 +529,14 @@
 					<int key="connectionID">114</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">levelLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="966626452"/>
+					</object>
+					<int key="connectionID">116</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickPayAttentionButton:</string>
 						<reference key="source" ref="777707669"/>
@@ -581,13 +618,14 @@
 						<int key="objectID">10</int>
 						<reference key="object" ref="876821904"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="974060178"/>
 							<reference ref="637224567"/>
 							<reference ref="1004384965"/>
 							<reference ref="777707669"/>
 							<reference ref="878386842"/>
 							<reference ref="748825807"/>
 							<reference ref="923374262"/>
+							<reference ref="974060178"/>
+							<reference ref="966626452"/>
 						</array>
 						<reference key="parent" ref="422428427"/>
 					</object>
@@ -668,6 +706,11 @@
 						<reference key="object" ref="748825807"/>
 						<reference key="parent" ref="876821904"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">115</int>
+						<reference key="object" ref="966626452"/>
+						<reference key="parent" ref="876821904"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -683,6 +726,7 @@
 				<string key="11.CustomClassName">AvatarView</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="113.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="115.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -699,7 +743,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">114</int>
+			<int key="maxID">116</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
@@ -710,6 +754,6 @@
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
